--- a/index.html
+++ b/index.html
@@ -47,25 +47,31 @@
                 </div>
             </div>
         </header>
-        <div class="mainInfo">
-            <div class="mainInfo__container _container">
-                <div class="mainInfo__container__img">
-                    <img src="imgs/pexels-andrea-piacquadio-3769021-removebg-preview 1.png" alt="">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                </div>
-                <div class="mainInfo__container__info">
-                    <h1 class="mainInfo__container__info__title">A revolutionary
-                        way to educate.</h1>
-                    <p class="mainInfo__container__info__subtitle">
-                        “Online education is electronically supported learning that
-                        relies on the Internet for teacher/student interaction and
-                        the distribution of class materials.”
-                    </p>
-                    <a href="" class="mainInfo__container__info__btn">Get Started</a>
+        <div class="mainInfo__wrapper">
+            <div class="mainInfo">
+                <div class="mainInfo__container _container">
+                    <div class="mainInfo__container__img">
+                        <img src="imgs/pexels-andrea-piacquadio-3769021-removebg-preview 1.png" alt="">
+                    </div>
+                    <div class="mainInfo__container__info">
+                        <h1 class="mainInfo__container__info__title">A revolutionary
+                            way to educate.</h1>
+                        <p class="mainInfo__container__info__subtitle">
+                            “Online education is electronically supported learning that
+                            relies on the Internet for teacher/student interaction and
+                            the distribution of class materials.”
+                        </p>
+                        <a href="" class="mainInfo__container__info__btn">Get Started</a>
+                    </div>
                 </div>
             </div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
         </div>
     </div>
     <script src="js/script.js"></script>
