--- a/index.html
+++ b/index.html
@@ -73,6 +73,28 @@
             <div class="circle"></div>
             <div class="circle"></div>
         </div>
+        <div class="cards">
+            <div class="cards__container _container">
+                <div class="cards__container__element">
+                    <div class="card__icon">
+                        <img src="imgs/bx_bxs-time.png" alt="time">
+                    </div>
+                    <h3 class="card__title"><span>60,000+</span> <br> Hours content</h3>
+                </div>
+                <div class="cards__container__element">
+                    <div class="card__icon">
+                        <img src="imgs/el_group.png" alt="people">
+                    </div>
+                    <h3 class="card__title"><span>1,000,000+</span> <br> Students</h3>
+                </div>
+                <div class="cards__container__element">
+                    <div class="card__icon">
+                        <img src="imgs/emojione-monotone_globe-showing-americas.png" alt="globe">
+                    </div>
+                    <h3 class="card__title"><span>110+</span> <br> Countries</h3>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
